Implemented Raycast correctly at least
